Прикручиваю бд. Юзеры хранятся и в кейклоке и в локальной бд. Реализую создание физ.лиц, логин, получение инфы о себе, апдейт. Подключил флайвей, прописал миграции. Остановился на реализации функционала по получению инфы о себе.

--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.keycloak:keycloak-admin-client:24.0.4'
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation group: 'org.postgresql', name: 'r2dbc-postgresql', version: '1.0.5.RELEASE'
+	implementation "org.postgresql:postgresql:$postgreSqlVersion"
+	implementation "org.flywaydb:flyway-core:$flywayDbVersion"
+	implementation "org.mapstruct:mapstruct:$mapStructVersion"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation "org.testcontainers:postgresql:1.19.7"
+	testImplementation 'org.testcontainers:r2dbc'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
