--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
+  r2dbc:
+    url: r2dbc:pool:postgres://localhost:5434/postgres
+    username: postgres
+    password: postgres
+  flyway:
+    url: jdbc:postgresql://localhost:5434/postgres
+    locations: classpath:db/migration
+    user: postgres
+    password: postgres
   security:
     oauth2:
       resourceserver:
@@ -9,9 +18,12 @@ spring:
         registration:
           keycloak:
             client-id: hypercore
-            client-secret: DOoH7QgR067e0znlXwrVg3vgFbEVD9cW
+            client-secret: JNB8wDVT8pijXIojIZjQjdyayZoSVeKX
 
-
+logging:
+  level:
+    io.r2dbc.postgresql.QUERY: DEBUG
+    io.r2dbc.postgresql.PARAM: DEBUG
 server:
   port: 8081
 
