Почти добил ItAuthRestControllerV1Tests, осталась проблема в последнем тесте. KeycloakServiceTests не знаю как мокнуть CreatedResponseUtil.getCreatedId. Перенес KeycloakService из UserService в IndividualService. Возможно, нужно еще выше, до PersonService.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   r2dbc:
-    url: r2dbc:pool:postgres://localhost:5490/postgres
+    url: r2dbc:pool:postgres://localhost:${POSTGRES_PORT}/postgres
     username: postgres
     password: postgres
   flyway:
-    url: jdbc:postgresql://localhost:5490/postgres
+    url: jdbc:postgresql://localhost:${POSTGRES_PORT}/postgres
     locations: classpath:db/migration
     user: postgres
     password: postgres
@@ -18,7 +18,7 @@ spring:
         registration:
           keycloak:
             client-id: hypercore
-            client-secret: DOoH7QgR067e0znlXwrVg3vgFbEVD9cW
+            client-secret: ${KEYCLOAK_CLIENT_SECRET}
 
 logging:
   level:
