Получил помощь по решению. Задачи: Понять что произошло Прибраться в коде Вынести дтошки в отдельный модуль

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ java {
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
@@ -36,6 +37,8 @@ dependencies {
 	testImplementation "org.testcontainers:postgresql:1.19.7"
 	testImplementation 'org.testcontainers:r2dbc'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'com.github.dasniko:testcontainers-keycloak:3.3.1'
+	testImplementation 'com.h2database:h2:2.2.224'
 }
 
 tasks.named('test') {
